fixed adding white background behind header

--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,9 @@ body{
 
 .fixed{
   position: fixed;
-  margin-left: 43.25%;
+  /* margin-left: 43.25%; */
+  background-color: white;
+  width: 100%;
 }
 
 .nav{
